Fix vertically overlapping of tags in posts

--- a/css/post.css
+++ b/css/post.css
@@ -40,6 +40,12 @@ pre {
 }
 
 .post__tags-list__tag {
+    border: 2px solid grey;
+    margin-top: 2px;
+    margin-bottom: 2px;
+    margin-left: 5px;
+    margin-right: 5px;
+
     display: inline-block;
 }
 
@@ -50,11 +56,8 @@ pre {
     padding-right: 10px;
     padding-top: 5px;
     padding-bottom: 5px;
-    margin-top: 2px;
-    margin-bottom: 2px;
-    margin-left: 5px;
-    margin-right: 5px;
-    border: 2px solid grey;
+
+    display: block;
 }
 
 .post__tags-list__tag__link:hover {
